@@ -20,16 +20,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import io.lettuce.core.ScriptOutputType;
 import io.lettuce.core.SetArgs;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.whispersystems.textsecuregcm.redis.ClusterLuaScript;
 import org.whispersystems.textsecuregcm.redis.FaultTolerantRedisCluster;
-import org.whispersystems.textsecuregcm.redis.LuaScript;
-import org.whispersystems.textsecuregcm.redis.ReplicatedJedisPool;
-import redis.clients.jedis.Jedis;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -45,40 +39,24 @@ public class AccountDatabaseCrawlerCache {
 
   private static final long LAST_NUMBER_TTL_MS  = 86400_000L;
 
-  private static final Logger log = LoggerFactory.getLogger(AccountDatabaseCrawlerCache.class);
-
-  private final ReplicatedJedisPool       jedisPool;
   private final FaultTolerantRedisCluster cacheCluster;
-  private final LuaScript                 unlockScript;
   private final ClusterLuaScript          unlockClusterScript;
 
-  public AccountDatabaseCrawlerCache(ReplicatedJedisPool jedisPool, FaultTolerantRedisCluster cacheCluster) throws IOException {
-    this.jedisPool = jedisPool;
-    this.cacheCluster = cacheCluster;
+  public AccountDatabaseCrawlerCache(FaultTolerantRedisCluster cacheCluster) throws IOException {
+    this.cacheCluster        = cacheCluster;
     String resource = "lua/account_database_crawler/unlock.lua";
-    try {
-      logger.info("Getting " + resource + " script from redis");
-      this.unlockScript = LuaScript.fromResource(jedisPool, resource);
-      logger.info("Got " + resource + " script from redis");
-    } catch (IOException | JedisException e) {
-      logger.error("Could not get the "+resource+" script from redis. You might need to increase the redis timeout in org.whispersystems.textsecuregcm.WhisperServerConfiguration.getCacheConfiguration()", e);
-      throw e;
-    }
-    try {
-      logger.info("Getting " + resource + " script from redis cluster");
-      this.unlockClusterScript = ClusterLuaScript.fromResource(cacheCluster, resource, ScriptOutputType.INTEGER);
-      logger.info("Got " + resource + " script from redis cluster");
-    } catch (IOException | JedisException e) {
-      logger.error("Could not get the "+resource+" script from redis cluster. You might need to increase the redis timeout in org.whispersystems.textsecuregcm.WhisperServerConfiguration.getCacheConfiguration()", e);
-      throw e;
-    }
+      try {
+        logger.info("Getting " + resource + " script from redis cluster");
+        this.unlockClusterScript = ClusterLuaScript.fromResource(cacheCluster, resource, ScriptOutputType.INTEGER);
+        logger.info("Got " + resource + " script from redis cluster");
+      } catch (IOException | JedisException e) {
+        logger.error("Could not get the "+resource+" script from redis cluster. You might need to increase the redis timeout in org.whispersystems.textsecuregcm.WhisperServerConfiguration.getCacheConfiguration()", e);
+        throw e;
+      }
   }
 
   public void clearAccelerate() {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      jedis.del(ACCELERATE_KEY);
-      cacheCluster.useWriteCluster(connection -> connection.sync().del(ACCELERATE_KEY));
-    }
+    cacheCluster.useWriteCluster(connection -> connection.sync().del(ACCELERATE_KEY));
   }
 
   public boolean isAccelerated() {
@@ -86,28 +64,11 @@ public class AccountDatabaseCrawlerCache {
   }
 
   public boolean claimActiveWork(String workerId, long ttlMs) {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      final boolean claimed = "OK".equals(jedis.set(ACTIVE_WORKER_KEY, workerId, "NX", "PX", ttlMs));
-
-      if (claimed) {
-        // TODO Restore the NX flag when making the cluster the primary data store
-        cacheCluster.useWriteCluster(connection -> connection.sync().set(ACTIVE_WORKER_KEY, workerId, SetArgs.Builder.px(ttlMs)));
-      }
-
-      return claimed;
-    }
+    return "OK".equals(cacheCluster.withWriteCluster(connection -> connection.sync().set(ACCELERATE_KEY, workerId, SetArgs.Builder.nx().px(ttlMs))));
   }
 
   public void releaseActiveWork(String workerId) {
-    List<byte[]> keys = Arrays.asList(ACTIVE_WORKER_KEY.getBytes());
-    List<byte[]> args = Arrays.asList(workerId.getBytes());
-    unlockScript.execute(keys, args);
-
-    try {
-      unlockClusterScript.execute(List.of(ACTIVE_WORKER_KEY), List.of(workerId));
-    } catch (Exception e) {
-      log.warn("Failed to execute clustered unlock script", e);
-    }
+    unlockClusterScript.execute(List.of(ACTIVE_WORKER_KEY), List.of(workerId));
   }
 
   public Optional<UUID> getLastUuid() {
@@ -118,14 +79,10 @@ public class AccountDatabaseCrawlerCache {
   }
 
   public void setLastUuid(Optional<UUID> lastUuid) {
-    try (Jedis jedis = jedisPool.getWriteResource()) {
-      if (lastUuid.isPresent()) {
-        jedis.psetex(LAST_UUID_KEY, LAST_NUMBER_TTL_MS, lastUuid.get().toString());
-        cacheCluster.useWriteCluster(connection -> connection.sync().psetex(LAST_UUID_KEY, LAST_NUMBER_TTL_MS, lastUuid.get().toString()));
-      } else {
-        jedis.del(LAST_UUID_KEY);
-        cacheCluster.useWriteCluster(connection -> connection.sync().del(LAST_UUID_KEY));
-      }
+    if (lastUuid.isPresent()) {
+      cacheCluster.useWriteCluster(connection -> connection.sync().psetex(LAST_UUID_KEY, LAST_NUMBER_TTL_MS, lastUuid.get().toString()));
+    } else {
+      cacheCluster.useWriteCluster(connection -> connection.sync().del(LAST_UUID_KEY));
     }
   }
 
